Pull request #302: fix/AG-9224 Subscription pop-up merges with the main pop-up screen
Merge in EXTENSIONS/vpn-extension from fix/AG-9224 to master

Squashed commit of the following:

commit f589077011f3308a8eac571653e66ac980a5e556
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Thu Aug 12 13:18:44 2021 +0300

    fix premium promo view css

--- a/src/popup/components/PromoSale/promo-sale.pcss
+++ b/src/popup/components/PromoSale/promo-sale.pcss
@@ -8,7 +8,7 @@
     justify-content: flex-start;
     z-index: var(--endpoints-z-index);
     width: var(--popup-width);
-    height: 100%;
+    height: var(--popup-height);
     padding: 20px;
     transition: opacity var(--t6);
     background-color: #fff;
